--- a/jenkinsfile
+++ b/jenkinsfile
@@ -9,7 +9,7 @@ pipeline {
   stages {
     stage('Clone Code') {
       steps {
-        git 'https://github.com/chetusangolgi/sample-flutter-for-jenkins-and-kubenetes.git'
+        git branch: 'main', url: 'https://github.com/chetusangolgi/sample-flutter-for-jenkins-and-kubenetes.git'
       }
     }
 
